Fixed margin and hide horizontal scroll.

--- a/personal-portfolio-website/site.css
+++ b/personal-portfolio-website/site.css
@@ -4,13 +4,15 @@
     Date: 05/30/2021
     Description: This is the css mark up for my portfolio website. 
 */
-* {
+body {
+    overflow-x: hidden;
     font-family: 'Poppins', Verdana, Arial, sans-serif;
     margin: 0;
     box-sizing: border-box;
+    width: 100%;
 }
 #header {
-	width: 100%;
+	width: 1450px;
 	background-color: #094514;
 }
 #logo {
@@ -93,7 +95,7 @@
 }
 /* Footer styling starts here. */
 .divider {
-	width: 100%;
+	width: 1450px;
 	height: 200px;
 	text-align: center;                                     
 	bottom: 0;
@@ -116,7 +118,7 @@
 	background: white;
 }
 #footer-container {
-	width: 100%;
+	width: 1450px;
 	background-color: #094514;
 	padding-bottom: 4rem;
 }
@@ -160,6 +162,7 @@
 	text-decoration: none;
 }
   #copy-right {
+      width: 1450px;
 	padding-bottom: 22px;
     padding-top: 105px;
 	text-align: center;
